# store-intelligence

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  run.sh
.github/workflows/: ci.yml
alembic/: env.py
app/: anomalies.py  correlation.py  funnel.py  health.py  heatmap.py  ingestion.py  main.py  metrics.py  models.py
app/core/: config.py  date_utils.py  errors.py  logging.py
app/db/: base.py  session.py
dashboard/: main.py
data/: pos_transactions.csv  store_layout.example.json  store_layout.json  test_db_con.py
docs/: CHOICES.md  DESIGN.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnomalyCard.tsx  FunnelChart.tsx  HealthStatus.tsx  HeatmapChart.tsx  Layout.tsx  LiveLineChart.tsx  MetricCard.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: AnomaliesPage.tsx  Dashboard.tsx  HealthPage.tsx
pipeline/: detect.py  direction.py  emit.py  queue.py  queuedetector.py  run.py  run.sh  staff.py  tracker.py  zones.py
scripts/: ingest_events.py  ingest_pos.py  ingest_pos_docker.py  merge_duplicates.py  process_clips_limited.py  seed_billing_docker.py  seed_billing_events.py
tests/: conftest.py  test_anomalies.py  test_correlation.py  test_errors.py  test_funnel.py  test_health.py  test_heatmap.py  test_ingestion.py  test_integration_pipeline.py  test_metrics.py  test_pipeline.py
(+1 files in other folders)
