[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "store-intelligence"
version = "0.1.0"
description = "Apex Retail Store Intelligence API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ultralytics>=8.2.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "redis>=5.0.0",
    "streamlit>=1.35.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
    "structlog>=24.1.0",
    "shapely>=2.0.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "alembic>=1.13.0",
    "plotly>=5.22.0",
    "st-pages>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest-cov>=5.0.0", "black>=24.0", "ruff>=0.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov=pipeline --cov-report=term-missing --cov-fail-under=70"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["app", "pipeline", "dashboard", "scripts"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/pipeline",
    "/dashboard",
    "/scripts",
    "/tests",
    "/docs",
    "/README.md",
    "/pyproject.toml",
    "/docker-compose.yml",
    "/Dockerfile",
    "/Dockerfile.dashboard",
]
